@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.8.5) unstable; urgency=low
 
   * istream-tee: allow second output to block
   * widget-http: don't transform error documents
+  * response, widget-http: disable filters after widget frame request
   * merged release 0.7.45
 
  --
